--- a/style.css
+++ b/style.css
@@ -1,30 +1,287 @@
-inpute[type="text"]{
-    font-size: 20px;
-    width: 400px;
-    min-width: 100px;
-    padding: 5px;
+nav,footer,header{
+    display: block;
 }
-form h2{
-    color:blue ;
+body {
+    line-height: 1;
+    margin: 0;
 }
-
 
 .container{
+    width: 100%;
+    margin: auto;
+    padding-top: 6%;
+    padding-bottom: 6%;
+}
+
+article p {
+  font-size: 35px;
+  padding: 20px;
+}
+
+nav{
+    width: 100%;
+    margin: 0;
+}
+
+.row{
+    width:100%;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+}
+
+.row::after{
+    display: table;
+    clear: both;
+    content="";
+}
+
+
+
+.col-1{
+    width: 8.33%;
+}
+.col-2{
+    width: 16.66%;
+}
+.col-3{
+    width: 25%;
+}
+.col-4{
+    width: 33.33%;
+}
+.col-5{
+    width: 41.66%;
+}
+.col-6{
     width: 50%;
-    margin: auto; 
-    border: 3px solid green;
-    padding: 28px;
-    margin-top: 50px;
 }
-button{
-    background-color: aqua;
-    border:none;
-    color:black;
-    padding: 12px;
+.col-7{
+    width: 58.33%;
+}
+.col-8{
+    width: 66.66%;
+}
+.col-9{
+    width: 75%;
+}
+.col-10{
+    width: 83.33%;
+}
+.col-11{
+    width: 91.66%;
+}
+.col-12{
+    width: 100%;
+}
+
+h1.large{
+    color:white;
+    font-size: 60px;
+    margin: 0;
+    line-height: 70px
+}
+
+form h2 {
+    color: #fff;
+}
+
+input[type="text"] {
+    font-size: 22px;
+    width: 400px;
+    min-width: 100px;
+    border-radius: 7px;
+    padding: 4px;
+}
+
+div.slopeIcon img {
+  display: block;
+  margin: auto;
+  box-shadow: -2px -2px 20px 2px rgba(0,0, 0,.15 ), 2px 2px 17px 2px rgba(0,0,0,1);
+}
+
+
+
+
+
+nav ul {
+    background-color: #eee;
+    overflow: hidden;
+    margin: 0;
+    padding: 0;
+}
+
+ul.topnav li{
+    list-style: none;
+    float: left;
+}
+
+ul.topnav li.topnav-right{
+    float: right;
+}
+
+ul.topnav li a{
+    display: block;
+    text-decoration: none;
+    min-height: 15px;
     text-align: center;
-    font-size: 1em;
-    border-radius: 8px;
+    padding: 14px;
+    text-transform: uppercase;
+    color: #666;
 }
-#button:hover {
-background-color: blueviolet
+
+ul.topnav li a:hover{
+        background-color: #0080ff;
+    color: #fff;
 }
+ul.topnav li.dropdownIcon{
+    display: none;
+}
+
+#section-1-gradient{
+      background-image: linear-gradient(to right, #076DFF , #65a5ff);
+
+}
+
+div.box {
+    text-align: center;
+    margin: 24px;
+    padding: 36px 24px 40px 24px;
+    border-radius: 7px;
+    background-color:white;
+    box-shadow: 0 0 0 1px rgba(0,0,0,.15),    0 2px 3px 0 rgba(0,0,0,.1);
+
+}
+
+div.leftSide-col {
+    margin-left: 30%;
+}
+
+div.rightSide-col {
+    margin-left: 15%;
+}
+
+h1.section2Header {
+  font-size: 65px;
+  text-align: center;
+}
+
+label {
+  font-size: 35px;
+  font-weight: 600;
+}
+
+p {
+  font-size: 28px;
+  line-height: 1.2;
+}
+
+button {
+  font-size: 32px;
+  font-weight: 700;
+  color: #fff;
+  background-color: #0069ff;
+  padding: 15px 60px;
+  display: block;
+  text-align: center;
+  margin: 5px;
+  border-radius: 7px;
+}
+
+button.learnMore {
+  display: block;
+  margin: auto;
+}
+
+footer.footsy {
+  background-color: #666;
+  padding-left: 10%;
+}
+
+footer.footsy h1 {
+  color: #fff;
+  font-size: 35px;
+}
+
+footer.footsy ul {
+  list-style: none;
+  text-align: left;
+  padding-left: 0;
+}
+
+footer.footsy ul li {
+  color: #fff;
+  font-size: 22px;
+  line-height: 1.5;
+}
+
+
+
+
+
+
+
+
+
+
+@media screen and (max-width: 680px){
+    ul.topnav li:not(:nth-child(1)){
+        display: none;
+    }
+    ul.topnav li.dropdownIcon{
+        display: block;
+        float: right
+    }
+    
+    ul.topnav.responsive li.dropdownIcon{
+        position: absolute;
+        top: 0;
+        right: 0;
+    }
+    
+    ul.topnav.responsive li {
+        display: inline;
+        float: none;
+        
+    }
+    
+    ul.topnav.responsive li a{
+        display: block;
+        text-align: left;
+    }
+    
+    .col-7,
+    .col-6,
+    .col-5,
+    .col-4 {
+        width: 100%;
+        margin: 0;
+    } 
+    
+    div.leftSide-col,
+    div.rightSide-col {
+        margin: 15%;
+    }
+    
+    div.videoContainer iframe {
+        position: relative;
+        width: 100%;
+        margin: 0;
+        overflow: hidden;
+    }
+    
+    input[type="text"] {
+        width: 300px;
+    }
+    
+      div.mobileStack {
+    width: 50%;
+    display: block;
+  }
+    
+    
+
+}
+
+
+
